[gd_scene load_steps=3 format=3 uid="uid://c6cyqdb6nbvbn"]

[ext_resource type="Script" uid="uid://cpoye1tj8g0lw" path="res://entities/referee/clock/clock.gd" id="1_nuuhd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nuuhd"]

[node name="Clock" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_nuuhd")
script = ExtResource("1_nuuhd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Time" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5:00"

[node name="TickTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="switch" from="." to="." method="_on_switch"]
[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timer_timeout"]
